WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121957
[GTK][WK2] Logging of accessibility events is not disabled between tests
https://bugs.webkit.org/show_bug.cgi?id=121957
Summary
[GTK][WK2] Logging of accessibility events is not disabled between tests
Mario Sanchez Prada
Reported
2013-09-26 07:54:25 PDT
The following tests are flaky in the GTK bots: platform/gtk/accessibility/aria-table-hierarchy.html [ Failure Pass ] platform/gtk/accessibility/aria-toggle-button-role.html [ Failure Pass ] platform/gtk/accessibility/button-accessible-name.html [ Failure Pass ] platform/gtk/accessibility/caret-browsing-text-focus.html [ Failure Pass ] platform/gtk/accessibility/entry-and-password.html [ Failure Pass ] platform/gtk/accessibility/list-items-always-exposed.html [ Failure Pass ] platform/gtk/accessibility/media-controls-panel-title.html [ Failure Pass ] platform/gtk/accessibility/name-from-label.html [ Failure Pass ] platform/gtk/accessibility/object-with-title.html [ Failure Pass ] platform/gtk/accessibility/remapped-aria-crash.html [ Failure Pass ] platform/gtk/accessibility/spans-paragraphs-and-divs.html [ Failure Pass ] platform/gtk/accessibility/spans.html [ Failure Pass ] platform/gtk/accessibility/table-hierarchy.html [ Failure Pass ] Apparently, the problem seems to be that the logging of accessibility events is for some reason being enabled (or maybe never disabled from previous tests) even if the tests do not explicitly ask for it. See for instance this diff for caret-browsing-text-focus: --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/platform/gtk/accessibility/caret-browsing-text-focus-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/platform/gtk/accessibility/caret-browsing-text-focus-actual.txt @@ -1,3 +1,21 @@ +Accessibility object emitted "state-change:busy = 1" / Name: "(No name)" / Role: 80 +Accessibility object emitted "property-change:accessible-parent" / Name: "(No name)" / Role: 48 +Accessibility object emitted "property-change:accessible-parent" / Name: "(No name)" / Role: 71 +Accessibility object emitted "property-change:accessible-parent" / Name: "(No name)" / Role: 71 +Accessibility object emitted "focus-event = 1" / Name: "(No name)" / Role: 71 +Accessibility object emitted "state-change:focused = 1" / Name: "(No name)" / Role: 71 +Accessibility object emitted "focus-event = 0" / Name: "(No name)" / Role: 71 +Accessibility object emitted "state-change:focused = 0" / Name: "(No name)" / Role: 71 +Accessibility object emitted "focus-event = 1" / Name: "(No name)" / Role: 71 +Accessibility object emitted "state-change:focused = 1" / Name: "(No name)" / Role: 71 +Accessibility object emitted "focus-event = 0" / Name: "(No name)" / Role: 71 +Accessibility object emitted "state-change:focused = 0" / Name: "(No name)" / Role: 71 +Accessibility object emitted "focus-event = 1" / Name: "(No name)" / Role: 71 +Accessibility object emitted "state-change:focused = 1" / Name: "(No name)" / Role: 71 +Accessibility object emitted "focus-event = 0" / Name: "(No name)" / Role: 71 +Accessibility object emitted "state-change:focused = 0" / Name: "(No name)" / Role: 71 +Accessibility object emitted "focus-event = 1" / Name: "(No name)" / Role: 71 +Accessibility object emitted "state-change:focused = 1" / Name: "(No name)" / Role: 71 A paragraph with a line break in the middle Denis, could you please take a look into this?
Attachments
Patch
(4.71 KB, patch)
2013-09-27 05:38 PDT
,
Denis Nomiyama (dnomi)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-09-26 07:54:42 PDT
<
rdar://problem/15087208
>
Mario Sanchez Prada
Comment 2
2013-09-26 08:01:11 PDT
Committed
r156459
: <
http://trac.webkit.org/changeset/156459
>
Mario Sanchez Prada
Comment 3
2013-09-26 08:01:51 PDT
(In reply to
comment #2
)
> Committed
r156459
: <
http://trac.webkit.org/changeset/156459
>
This is just the tests being marked as flaky in TestExpectations while we investigate the issue.
Mario Sanchez Prada
Comment 4
2013-09-26 08:10:41 PDT
Sorry, I did not realize this results in [1] are actually from WK2 (that explains why I was not reproducing the error locally), so now renaming the bug to reflec that and moving the test expectations to the right file... [1]
http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release/builds/41142/steps/layout-test/logs/stdio
Mario Sanchez Prada
Comment 5
2013-09-26 08:15:00 PDT
Committed
r156460
: <
http://trac.webkit.org/changeset/156460
>
Denis Nomiyama (dnomi)
Comment 6
2013-09-27 05:38:22 PDT
Created
attachment 212801
[details]
Patch
Mario Sanchez Prada
Comment 7
2013-09-27 06:23:24 PDT
Comment on
attachment 212801
[details]
Patch So glad you fixed this! Thanks
WebKit Commit Bot
Comment 8
2013-09-27 06:47:35 PDT
Comment on
attachment 212801
[details]
Patch Clearing flags on attachment: 212801 Committed
r156541
: <
http://trac.webkit.org/changeset/156541
>
WebKit Commit Bot
Comment 9
2013-09-27 06:47:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug